botones nuevos para apartado de resultados de búsqueda

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
             <div class="contenedor">                
             </div>
         </div>        
-        <div>
+        <div class="paginado-corriente">
             <button id="anterior" type="button">Página anterior</button>
             <button id="siguiente" type="button">Página siguiente</button>
-        </div>       
+        </div>   
+        <div class="paginado-especifico">
+            <button id="anterior-e" type="button">Página anterior</button>
+            <button id="siguiente-e" type="button">Página siguiente</button>
+        </div>      
 
 </main>
     
