--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
     <main>
         <div>
+            <form>
             <label>
                 Ingrese un nombre
-                <input id="busqueda" type="text" placeholder="Busca Aquí">
+                <input id="busqueda" type="text" placeholder="Busca Aquí" required>
             </label>        
             <label>            
                 <input id="submt" type ="submit" value="enviar">
             </label>
+            </form>
         </div>        
         <div class="carrousel">
             <div class="contenedor">                
